WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160686
[Win] Crash in MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=160686
Summary
[Win] Crash in MiniBrowser.
Per Arne Vollan
Reported
2016-08-09 03:34:25 PDT
We need to specify a plugin info provider object in the page configuration.
Attachments
Patch
(1.63 KB, patch)
2016-08-09 03:56 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-08-09 03:56:05 PDT
Created
attachment 285634
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-09 14:00:43 PDT
Comment on
attachment 285634
[details]
Patch Clearing flags on attachment: 285634 Committed
r204293
: <
http://trac.webkit.org/changeset/204293
>
WebKit Commit Bot
Comment 3
2016-08-09 14:00:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug