[Win] Crash in MiniBrowser. https://bugs.webkit.org/show_bug.cgi?id=160686

Reviewed by Sam Weinig.

We need to specify a plugin info provider object in the page configuration.

* WebView.cpp:
(WebView::initWithFrame):


Canonical link: https://commits.webkit.org/178820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204293 268f45cc-cd09-0410-ab3c-d52691b4dbfc